Add Android bottom sheet and open using deeplink

--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">Tailscale</string>
     <string name="tile_name">Tailscale</string>
+    <string name="titleTextView">HALLO</string>
 </resources>
